// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookList component renders a BookListItem by default 1`] = `
<div
  className="book-list-item"
>
  <div
    className="book-list-img-container"
  >
    <span />
  </div>
  <div
    className="book-info"
  >
    <h3
      className="capitalize"
    >
       
      <Link
        to="/book/undefined"
      >
         
      </Link>
    </h3>
    <div
      className="authors-container"
    >
      no authors!
    </div>
    <p />
  </div>
  <div
    className="ratings-container"
  >
    <BookStarRating
      rating={0}
    />
    <p>
      Based on 
       reviews
    </p>
    <p
      className="capitalize BookListItem__instrument"
    />
  </div>
</div>
`;

exports[`BookList component renders the BookListItem given props 1`] = `
<div
  className="book-list-item"
>
  <div
    className="book-list-img-container"
  >
    <span />
  </div>
  <div
    className="book-info"
  >
    <h3
      className="capitalize"
    >
       
      <Link
        to="/book/undefined"
      >
         
      </Link>
    </h3>
    <div
      className="authors-container"
    >
      <RenderAuthors
        authors={
          Array [
            Object {
              "first_name": "Suzie",
              "last_name": "Violin",
            },
            Object {
              "first_name": "Will",
              "last_name": "Superstar",
            },
          ]
        }
      />
    </div>
    <p />
  </div>
  <div
    className="ratings-container"
  >
    <BookStarRating
      rating={0}
    />
    <p>
      Based on 
       reviews
    </p>
    <p
      className="capitalize BookListItem__instrument"
    />
  </div>
</div>
`;
